fix font size scaling on mobile, add theme song

--- a/less/app.less
+++ b/less/app.less
@@ -61,6 +61,9 @@ h1.block-title {
 .image {
   width: 100%;
 }
+.image--starterpack {
+  cursor: pointer;
+}
 
 
 .link {
@@ -265,7 +268,7 @@ h1.block-title {
     top: 0;
   }
   .q {
-    font-size: 35px;
+    font-size: 45px;
     margin-bottom: 5px;
   }
   .a {
